--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-<!-- nothing here -->
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="=UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="='IE=edge" />
+		<meta
+			name="viewport"
+			content=""
+			width="device-width,"
+			initial-scale="1.0"
+		/>
+		<link rel="stylesheet" href="style.css" />
+	</head>
+	<body>
+		<div class="background">
+			<div class="logo">
+				<div class="foto">
+					<img src="images-coco/logo.png" />
+				</div>
+				<h1>Wat als je de familie zou kunnen ontmoeten die voor jou kwam...</h1>
+				<h2>
+					De ambitieuze muzikant Miguel bundelt zijn krachten met de charmante
+					bedrieger Hector op een buitengewone reis door het kleurrijke Land der
+					Doden om zijn familieeschiedenis te onthullen.
+				</h2>
+			</div>
+		</div>
+	</body>
+</html>
